# plenum

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  LICENSE  Makefile  PROBLEMS.md  PROJECT_PLAN.md  README.md  RELEASE.md  RESEARCH.md  SECURITY.md  dist-workspace.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish-packages.yml
.plenum/: config.json
benches/: connection.rs  introspection.rs  query.rs
examples/: seed_duckdb.rs
schemas/: connect_success.json  error_envelope.json  introspect_success.json  query_success.json  success_envelope.json
scripts/: test-live.sh
src/: diff.rs  dsn.rs  error.rs  lib.rs  main.rs  mcp.rs  output.rs
src/capability/: mod.rs
src/config/: mod.rs
src/engine/: mod.rs
src/engine/duckdb/: mod.rs
src/engine/mysql/: mod.rs
src/engine/postgres/: mod.rs
src/engine/sqlite/: mod.rs
tests/: cli_connect.rs  duckdb_parity.rs  edge_cases.rs  integration_tests.rs  live_mysql.rs  live_postgres.rs  mcp_protocol.rs  output_validation.rs  schema_drift.rs  sqlite_parity.rs
tests/live/: compose.yaml
tests/live/seed/mysql/: 01_schema.sql  02_data.sql
tests/live/seed/postgres/: 01_schema.sql  02_data.sql
tests/snapshots/: output_validation__error_envelope_snapshot.snap  output_validation__error_envelope_snapshot_capability_violation.snap  output_validation__error_envelope_snapshot_config_error.snap  output_validation__error_envelope_snapshot_connection_failed.snap  output_validation__error_envelope_snapshot_engine_error.snap  output_validation__error_envelope_snapshot_invalid_input.snap  output_validation__error_envelope_snapshot_query_failed.snap  output_validation__query_result_snapshot.snap  output_validation__success_envelope_snapshot.snap
