[package]
name = "plenum"
version = "2.0.0"
edition = "2021"
authors = ["Plenum Contributors"]
license = "MIT OR Apache-2.0"
description = "Agent-first database control CLI with least-privilege execution"
repository = "https://github.com/reflex-search/plenum"
homepage = "https://github.com/reflex-search/plenum"
documentation = "https://github.com/reflex-search/plenum"
keywords = ["database", "cli", "mcp", "agent", "sql"]
categories = ["command-line-utilities", "database"]

[lib]
name = "plenum"
path = "src/lib.rs"

[[bin]]
name = "plenum"
path = "src/main.rs"

[[bin]]
name = "generate-schemas"
path = "src/bin/generate_schemas.rs"

[[example]]
name = "seed_duckdb"
required-features = ["duckdb"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"  # JSON schema generation for MCP tool definitions

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime (required by rmcp and async database drivers)
tokio = { version = "1.0", features = ["full"] }

# MCP server (official Rust SDK)
# NOTE: MCP integration is planned for future release (Phase 7)
# rmcp = { version = "0.12", features = ["transport-io"] }

# Configuration management
dialoguer = "0.11"  # Interactive prompts for connection setup
dirs = "5.0"        # Cross-platform configuration directory paths
keyring = "3"       # OS keychain credential storage (macOS Keychain, Windows Credential Manager, Linux Secret Service)

# Database drivers (native drivers only, NO sqlx)
# Maximum engine isolation - each driver is completely independent
# NOTE: Made optional for Phase 0 to avoid build dependency issues
# Will be enabled as required features in Phases 3-5 when implementing engines
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"], optional = true }  # PostgreSQL native driver
postgres-native-tls = { version = "0.5", optional = true }  # TLS for tokio-postgres
# `vendored` compiles OpenSSL from source so release builds do not depend on a
# system OpenSSL install or the OPENSSL_LIB_DIR/OPENSSL_DIR environment variables
# (which are fragile on Nix and cross-compilation hosts). Produces portable
# binaries. Only pulled in by the `postgres` feature. See REF-258.
native-tls = { version = "0.2", optional = true, features = ["vendored"] }   # Platform TLS (OpenSSL/Secure Transport/SChannel)
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"], optional = true }     # MySQL native async driver
rusqlite = { version = "0.32", features = ["bundled"], optional = true }  # SQLite native driver with bundled lib
duckdb = { version = "1.10504.0", features = ["bundled"], optional = true }  # DuckDB native driver with bundled lib

# BLOB encoding (Base64) - used by SQLite and PostgreSQL
base64 = "0.22"

# PostgreSQL type conversions (timestamp, uuid, etc.)
chrono = { version = "0.4", optional = true }  # Date/time types
uuid = { version = "1.0", optional = true }     # UUID type

[features]
default = ["all-engines"]  # Enable all database engines by default
postgres = ["dep:tokio-postgres", "dep:chrono", "dep:uuid", "dep:postgres-native-tls", "dep:native-tls"]
mysql = ["dep:mysql_async"]
sqlite = ["dep:rusqlite"]
duckdb = ["dep:duckdb", "dep:chrono"]
all-engines = ["postgres", "mysql", "sqlite", "duckdb"]

[dev-dependencies]
# Testing utilities
pretty_assertions = "1.4"  # Better test output formatting
insta = "1.34"             # Snapshot testing for JSON output validation
criterion = "0.5"          # Benchmarking framework
rusqlite = { version = "0.32", features = ["bundled"] }  # Create SQLite test fixtures

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
